--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BsQZHG7o/tYmAwxjVpng6H0QjzBf6auLowHuVHlxqqU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=es_MX
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-
-# PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
@@ -20,33 +18,34 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# --- Sin conexión a base de datos ---
+DB_CONNECTION=null
+DB_HOST=null
+DB_PORT=null
+DB_DATABASE=null
+DB_USERNAME=null
+DB_PASSWORD=null
 
-SESSION_DRIVER=database
+# --- Sesiones, cache y colas en memoria ---
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+CACHE_DRIVER=array
+QUEUE_CONNECTION=sync
+
+BROADCAST_DRIVER=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 
-CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+# --- Redis desactivado (solo si no lo usas) ---
+REDIS_CLIENT=null
+REDIS_HOST=null
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=null
 
+# --- Correo desactivado (solo para logs) ---
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
@@ -56,6 +55,7 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# --- AWS (sin uso) ---
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
